--- a/contact-us.html
+++ b/contact-us.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="footerBottom">
-        <div>Swadnama</div>
+        <div>Swadnama- Ghar ka Khana</div>
         <div>Made in India</div>
       </div>
     </footer>
@@ -76,5 +76,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- End FontAwesome -->
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
