--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="footerBottom">
-        <div>Swadnama</div>
+        <div>Swadnama- Ghar ka Khana</div>
         <div>Made in India</div>
       </div>
     </footer>
@@ -169,14 +169,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- End FontAwesome -->
-
-    <script>
-      const menu = document.querySelector(".mobileNavbar i");
-      const navbar = document.querySelector(".navbar");
-
-      menu.addEventListener("click", () => {
-        navbar.classList.toggle("open");
-      });
-    </script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
