--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swadnama</title>
 
+    <link
+      rel="icon"
+      href="./assets/images/favicon-512x512.png"
+      type="image/png"
+      sizes="512x512"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="./assets/images/favicon-512x512.png"
+      sizes="512x512"
+    />
+
     <link rel="stylesheet" href="./assets/css/index.css" />
   </head>
   <body>
